<?xml version="1.0"?>
<package format="3">
  <name>panda_grasp_cpp_demo</name>
  <version>0.0.1</version>
  <description>MoveIt2 Panda grasp demo in C++</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
